[package]
name = "cstrml-tee"
version = "0.3.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = 'parity-scale-codec', version = '1.3.0' }
serde = { optional = true, version = '1.0.106' }
serde_json = "1.0.51"
signatory = "0.18.0"
signatory-ring = "0.18.0"
hex = '0.4.2'

# substrate frame dependencies
frame-support = { default-features = false, version = '2.0.0-rc2' }
system = { package = 'frame-system', default-features = false, version = '2.0.0-rc2' }

# substrate primitives
sp-core = { default-features = false, version = '2.0.0-rc2' }
sp-io = { default-features = false, version = '2.0.0-rc2' }
sp-runtime = { default-features = false, version = '2.0.0-rc2' }
sp-runtime-interface = { default-features = false, version = '2.0.0-rc2' }
sp-std = { default-features = false, version = '2.0.0-rc2' }

# crust runtime modules
market = { package = 'cstrml-market', path = '../market', default-features = false }
primitives = { package = 'cst-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
keyring = { package = "sp-keyring", version = '2.0.0-rc2' }
balances = { package = 'pallet-balances', version = '2.0.0-rc2' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'system/std',
    'sp-runtime-interface/std',
    'market/std',
    'primitives/std'
]