[package]
name = "cstrml-tee"
version = "0.6.1"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = 'parity-scale-codec', version = '1.3.1' }
serde = { optional = true, version = '1.0.106' }
serde_json = "1.0.55"
signatory = "0.18.0"
signatory-ring = "0.18.0"
hex = '0.4.2'
base64 = "0.12.2"
openssl = { optional = true, version = "0.10.29" }

# substrate frame dependencies
frame-support = { default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }
system = { package = 'frame-system', default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }

# substrate primitives
sp-core = { default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }
sp-io = { default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }
sp-runtime = { default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }
sp-runtime-interface = { default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }
sp-std = { default-features = false, version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }

# crust runtime modules
market = { package = 'cstrml-market', path = '../market', default-features = false }
primitives = { package = 'cst-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
keyring = { package = "sp-keyring", version = '2.0.0-rc4', git = 'http://github.com/paritytech/substrate.git', rev = 'fd55c45a0a1fd705297e9a0888acdf277e1149a5' }
balances = { package = 'cstrml-balances', path = '../balances' }

[features]
default = ['std']
std = [
    'serde',
    'openssl',
    'codec/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'system/std',
    'sp-runtime-interface/std',
    'market/std',
    'primitives/std'
]