[package]
name = "cstrml-benefits"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/paritytech/crust/"

[dependencies]
serde = { default-features = false, version = "1.0.140" }
serde_derive = { optional = true, version = "1.0.102" }
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }
rustc-hex = { default-features = false, version = "2.0.1" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
primitives = { package = "crust-parachain-primitives", path = "../../primitives", default-features = false }

frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[dev-dependencies]
balances = { package = 'pallet-balances', git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
primitives = { package = "crust-parachain-primitives", path = "../../primitives", features = ["test"] }
hex-literal = "0.3.4"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "rustc-hex/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]