[package]
name = 'cstrml-bridge-transfer'
version = '1.0.0'
authors = ['crustio']
edition = '2018'
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/paritytech/crust/"

[dependencies]
# third-party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "3.0.0" }
serde = { optional = true, version = "1.0.116" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# primitives
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

cstrml-bridge = { path = "../bridge" , default-features = false }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
hex-literal = "0.3.4"
balances = { package = 'pallet-balances', git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19"}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"cstrml-bridge/std",
]
