[package]
name = 'cstrml-bridge'
version = '1.0.0'
authors = ['crustio']
edition = '2018'
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/paritytech/crust/"

[dependencies]
# third-party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "2.3.0" }
serde = { optional = true, version = "1.0.116" }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# primitives
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
balances = { package = 'pallet-balances', git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std"
]
