[package]
name = 'cstrml-bridge'
version = '1.0.0'
authors = ['crustio']
edition = '2018'
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/paritytech/crust/"

[dependencies]
# third-party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "3.0.0" }
serde = { optional = true, version = "1.0.171" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# primitives
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

# frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[dev-dependencies]
balances = { package = 'pallet-balances', git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std"
]
