[package]
name = "cstrml-claims"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/paritytech/crust/"

[dependencies]
serde = { default-features = false, version = "1.0.144" }
serde_derive = { optional = true, version = "1.0.102" }
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }
rustc-hex = { default-features = false, version = "2.0.1" }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[dev-dependencies]
balances = { package = 'pallet-balances', git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
hex-literal = "0.3.4"

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "rustc-hex/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]